# code-challenge-2024-Harsh1s

./: .gitignore  Cargo.toml  output.txt  run.sh  solution.md
miner/: Cargo.toml
miner/src/: main.rs
src/: main.rs  mine.rs  miner.rs  transaction.rs  validate.rs  validator.rs
src/block_mine/: block.rs  merkle_root.rs  serialise_tx.rs
src/miner/: block.rs  merkle_root.rs  mod.rs  serialise.rs
src/validation_checks/: mod.rs  p2pkh.rs  p2wpkh.rs  p2wsh.rs
src/validator/: mod.rs  p2pkh.rs  p2wpkh.rs  p2wsh.rs
