[package]
name = "miner"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_derive = "*"
rand = "0.8"
sha2 = "0.9"
num-bigint = "0.4"
num-traits = "0.2"